[project]
name = "hexlet-code"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
    "pytest>=8.3.4",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]